--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1103,6 +1103,7 @@ h1 {
 	font-size: 16px;
     font-weight: 600;
     margin-bottom: 5px;
+    margin-top: 0;
 }
 
 .product__item__text .rating {
@@ -2119,23 +2120,23 @@ Breadcrumb
 -----------------------*/
 
 .breadcrumb-blog {
-	text-align: center;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	height: 350px;
+	width: 100%;
+    height: 450px;
+    background-size: cover;
+	padding-top: 130px;
+    padding-bottom: 40px;
+	position: relative;
 }
 
 .breadcrumb-blog h2 {
-	color: #ffffff;
-	font-size: 60px;
+	color: #111111;
+	font-size: 42px;
 	font-weight: 700;
+	line-height: 50px;
+	margin-bottom: 18px;
+	text-align: center;
+	justify-content: center; 
+    align-items: center; 
 }
 
 /*---------------------
@@ -2832,19 +2833,19 @@ Breadcrumb
 }
 
 .blog__item__pic {
-	height: 270px;
+	position: relative;
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+    padding-top: 100%;
+	height: 100px;
+	background-size: cover;
 }
 
 .blog__item__text {
-	padding: 30px 30px 25px;
-	margin: 0 30px;
-	margin-top: -35px;
-	background: #f0f0f0;
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
-	-moz-transition: all, 0.3s;
-	-ms-transition: all, 0.3s;
+	text-align: center;
+    padding: 10px;
+	position: relative;
 }
 
 .blog__item__text span {
@@ -3793,12 +3794,23 @@ Breadcrumb
         padding-top: 110px;
         padding-bottom: 35px;
     }
+	.breadcrumb-blog {
+		height: 450px; 
+        padding-top: 110px;
+        padding-bottom: 35px;
+	}
 }
 
 /* Medium Device = 1200px */
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
 	.hero__items {
+		width: 100%;
+        height: 330px; 
+        padding-top: 90px;
+        padding-bottom: 30px;
+    }
+	.breadcrumb-blog {
 		width: 100%;
         height: 330px; 
         padding-top: 90px;
@@ -3839,7 +3851,7 @@ Breadcrumb
 	}
 	.instagram__pic__item {
 		width: 100%;
-		height: 190px;
+		height: 330px;
 		background-position: center center;
 	}
 	.header__menu ul li {
@@ -4687,9 +4699,17 @@ Breadcrumb
         padding-bottom: 25px;
 		right: -0.1%; 
 	}
+	.breadcrumb-blog {
+		width: 100%;
+		height: 255px;
+		object-fit: cover;
+		padding-top: 70px;
+        padding-bottom: 25px;
+		right: -0.1%; 
+	}
 	.instagram__pic__item {
 		width: 100%;
-		height: 190px;
+		height: 330px;
 		background-position: center center;
 	}
     .history-content {
@@ -4708,6 +4728,12 @@ Breadcrumb
 
 @media (max-width: 576px) {
 	.hero__items {
+		width: 100%;
+        height: 190px; 
+        padding-top: 60px;
+        padding-bottom: 20px;
+    }
+	.breadcrumb-blog {
 		width: 100%;
         height: 190px; 
         padding-top: 60px;
