update tampilan home n produk mobile

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -759,7 +759,51 @@ h1 {
 	-o-transition: all, 0.3s;
 	transition: all, 0.3s;
 }
+/* Responsif untuk perangkat mobile */
+@media (max-width: 576px) {
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0; /* Hapus margin pada row untuk mobile */
+    }
 
+    .col-lg-7, .col-lg-5 {
+        flex: 0 0 33.33%; /* Setiap kolom menjadi 1/3 dari lebar container */
+        max-width: 33.33%; /* Setiap kolom menjadi 1/3 dari lebar container */
+        padding: 2px; /* Hapus padding untuk mobile */
+    }
+
+    .banner__item {
+        position: relative;
+        box-sizing: border-box;
+        width: 100%;
+        margin-bottom: 10px; /* Tambahkan jarak antar item */
+    }
+
+    .banner__item__text {
+        position: relative; /* Ubah posisi menjadi relatif untuk mobile */
+        padding: 5px;
+        background: rgba(255, 255, 255, 0.7);
+        text-align: center; /* Teks rata tengah */
+    }
+
+    .banner__item__text h2 {
+        font-size: 16px; /* Ubah ukuran font untuk mobile */
+        margin-bottom: -10px; /* Kurangi margin bawah untuk mengurangi jarak */
+		margin-top: -15px;
+    }
+
+    .banner__item__text span {
+        font-size: 16px; /* Ubah ukuran font untuk mobile */
+        margin-bottom: -10px; /* Kurangi margin bawah untuk mengurangi jarak */
+    }
+
+    .banner__item__text a {
+        font-size: 12px; /* Ubah ukuran font untuk mobile */
+        letter-spacing: 0px; /* Ubah jarak antar huruf untuk mobile */
+        margin-top: -10px; /* Kurangi margin atas untuk mengurangi jarak */
+    }
+}
 /*---------------------
   Categories
 -----------------------*/
@@ -933,217 +977,208 @@ h1 {
 -----------------------*/
 
 .product {
-	padding-top: 0;
-	padding-bottom: 60px;
+    padding-top: 0;
+    padding-bottom: 60px;
 }
 
 .filter__controls {
-	text-align: center;
-	margin-bottom: 45px;
+    text-align: center;
+    margin-bottom: 45px;
 }
 
 .filter__controls li {
-	color: #b7b7b7;
-	font-size: 24px;
-	font-weight: 700;
-	list-style: none;
-	display: inline-block;
-	margin-right: 88px;
-	cursor: pointer;
+    color: #b7b7b7;
+    font-size: 24px;
+    font-weight: 700;
+    list-style: none;
+    display: inline-block;
+    margin-right: 88px;
+    cursor: pointer;
 }
 
 .filter__controls li:last-child {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .filter__controls li.active {
-	color: #FF4DA3;
-}
-
-.product__item {
-	overflow: hidden;
-	margin-bottom: 20px;
-}
-
-.product__item.sale .product__item__pic .label {
-	color: #ffffff;
-	background: #111111;
-}
-
-.product__item.sale .product__item__text .rating i {
-	color: #f7941d;
-}
-
-.product__item.sale .product__item__text .rating i:nth-last-child(1) {
-	color: #fcfafa;
-}
-
-.product__item:hover .product__item__pic .product__hover {
-	right: 20px;
-	opacity: 1;
-}
-
-.product__item:hover .product__item__text a {
-	top: 22px;
-	opacity: 1;
-	visibility: visible;
-}
-
-.product__item:hover .product__item__text h6 {
-	opacity: 1;
-}
-
-.product__item:hover .product__item__text .product__color__select {
-	opacity: 1;
-}
-
-.product__item__pic {
-	position: relative;
-	background-position: center;
-	background-size: cover;
-	width: 100%;
-    padding-top: 100%;
-	height: 100px;
-	background-size: cover;
-}
-
-.product__item__pic .label {
-	color: #111111;
-	font-size: 11px;
-	font-weight: 700;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	display: inline-block;
-	padding: 4px 15px 2px;
-	background: #ffffff;
-	position: absolute;
-	left: 0;
-	top: 20px;
-}
-
-.product__item__pic .product__hover {
-	position: absolute;
-	right: -200px;
-	top: 20px;
-	-webkit-transition: all, 0.8s;
-	-o-transition: all, 0.8s;
-	transition: all, 0.8s;
-}
-
-.product__item__pic .product__hover li {
-	list-style: none;
-	margin-bottom: 10px;
-	position: relative;
-}
-
-.product__item__pic .product__hover li:hover span {
-	opacity: 1;
-	visibility: visible;
-}
-
-.product__item__pic .product__hover li span {
-	color: #ffffff;
-	background: #111111;
-	display: inline-block;
-	padding: 4px 10px;
-	font-size: 12px;
-	position: absolute;
-	left: -78px;
-	top: 5px;
-	z-index: 1;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
-}
-
-.product__item__pic .product__hover li span:after {
-	position: absolute;
-	right: -2px;
-	top: 5px;
-	height: 15px;
-	width: 15px;
-	background: #111111;
-	content: "";
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-	z-index: -1;
-}
-
-.product__item__pic .product__hover li img {
-	background: #111111;
-	padding: 10px;
-	display: inline-block;
-}
-
-.product__item__text {
-	text-align: center;
-    padding: 10px;
-	position: relative;
-}
-.product__item__text {
-	padding-top: 25px;
+    color: #FF4DA3;
 	
 }
 
+.product__item {
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.product__item.sale .product__item__pic .label {
+    color: #ffffff;
+    background: #111111;
+}
+
+.product__item.sale .product__item__text .rating i {
+    color: #f7941d;
+}
+
+.product__item.sale .product__item__text .rating i:nth-last-child(1) {
+    color: #fcfafa;
+}
+
+.product__item:hover .product__item__pic .product__hover {
+    right: 20px;
+    opacity: 1;
+}
+
+.product__item:hover .product__item__text a {
+    top: 22px;
+    opacity: 1;
+    visibility: visible;
+}
+
+.product__item:hover .product__item__text h6 {
+    opacity: 1;
+}
+
+.product__item:hover .product__item__text .product__color__select {
+    opacity: 1;
+}
+
+.product__item__pic {
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    padding-top: 100%;
+    height: 100px;
+    background-size: cover;
+}
+
+.product__item__pic .label {
+    color: #111111;
+    font-size: 11px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 4px 15px 2px;
+    background: #ffffff;
+    position: absolute;
+    left: 0;
+    top: 20px;
+}
+
+.product__item__pic .product__hover {
+    position: absolute;
+    right: -200px;
+    top: 20px;
+    -webkit-transition: all, 0.8s;
+    -o-transition: all, 0.8s;
+    transition: all, 0.8s;
+}
+
+.product__item__pic .product__hover li {
+    list-style: none;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.product__item__pic .product__hover li:hover span {
+    opacity: 1;
+    visibility: visible;
+}
+
+.product__item__pic .product__hover li span {
+    color: #ffffff;
+    background: #111111;
+    display: inline-block;
+    padding: 4px 10px;
+    font-size: 12px;
+    position: absolute;
+    left: -78px;
+    top: 5px;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s;
+}
+
+.product__item__pic .product__hover li span:after {
+    position: absolute;
+    right: -2px;
+    top: 5px;
+    height: 15px;
+    width: 15px;
+    background: #111111;
+    content: "";
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: -1;
+}
+
+.product__item__pic .product__hover li img {
+    background: #111111;
+    padding: 10px;
+    display: inline-block;
+}
+
+.product__item__text {
+    text-align: center;
+    padding: 10px;
+    position: relative;
+}
+
+.product__item__text {
+    padding-top: 25px;
+}
+
 .product__item__text a {
-	font-size: 15px;
-	color: #FF4DA3;
-	font-weight: 700;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
+    font-size: 15px;
+    color: #FF4DA3;
+    font-weight: 700;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s;
 }
 
 .product__item__text h6 {
-	color: #FF4DA3;
-	font-size: 16px;
-    font-weight: 600;
+    color: #FF4DA3;
+    font-size: 15px;
+    font-weight: 500;
     margin-bottom: 5px;
     margin-top: 0;
 }
 
-.product__item__text .rating {
-	margin-bottom: 6px;
-}
-
-.product__item__text .rating i {
-	font-size: 14px;
-	color: white;
-	margin-right: -5px;
-}
-
 .product__item__text h5 {
-	color: #0d0d0d;
-	font-weight: 700;
+    color: #0d0d0d;
+    font-weight: 700;
 }
 
 /* Styling untuk tombol "Tambah ke Keranjang" */
 .product-page-cart {
-	display: inline-flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-	background-color: white;
+    background-color: white;
     color: black;
-    font-size: 12px; /* Ukuran font yang lebih kecil */
-    font-weight: 500; /* Mengurangi ketebalan font */
-    padding: 5px 10px; /* Padding lebih kecil */
+    font-size: 12px; 
+    font-weight: 500; 
+    padding: 5px 10px; 
     border: none;
     cursor: pointer;
     text-align: center;
-	white-space: nowrap;
+    white-space: nowrap;
 }
 
 /* Menambahkan ikon keranjang */
 .product-page-cart::before {
-    content: "\f07a"; /* Ikon keranjang Font Awesome */
+    content: "\f07a"; 
     font-family: "Font Awesome 5 Free"; 
     font-weight: 900;
     margin-right: 8px;
@@ -1158,65 +1193,31 @@ h1 {
 
 /* Responsif di mobile */
 @media (max-width: 767px) {
+    .product__item {
+        margin-bottom: 30px; 
+		margin-top: -50px;
+    }
+
+    .product__item__text {
+        padding: 10px; 
+    }
+
+    .product__item__text h6 {
+        margin-bottom: 2px; 
+    }
+
     .product-page-cart {
         font-size: 12px;
         padding: 6px 10px;
         width: 100%; 
         border-radius: 20px;
     }
+	.filter__controls li.active {
+		color: #FF4DA3;
+		position: relative;
+		top: -50px; 
+	}
 }
-
-.product__item__text .product__color__select {
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	opacity: 0;
-	-webkit-transition: all, 0.5s;
-	-o-transition: all, 0.5s;
-	transition: all, 0.5s;
-}
-
-.product__item__text .product__color__select label {
-	display: inline-block;
-	height: 12px;
-	width: 12px;
-	background: #5e64d1;
-	border-radius: 50%;
-	margin-bottom: 0;
-	margin-right: 5px;
-	position: relative;
-	cursor: pointer;
-}
-
-.product__item__text .product__color__select label.black {
-	background: #404a47;
-}
-
-.product__item__text .product__color__select label.grey {
-	background: #d5a667;
-}
-
-.product__item__text .product__color__select label.active:after {
-	opacity: 1;
-}
-
-.product__item__text .product__color__select label:after {
-	position: absolute;
-	left: -3px;
-	top: -3px;
-	height: 18px;
-	width: 18px;
-	border: 1px solid #b9b9b9;
-	content: "";
-	border-radius: 50%;
-	opacity: 0;
-}
-
-.product__item__text .product__color__select label input {
-	position: absolute;
-	visibility: hidden;
-}
-
 /*---------------------
   Shop
 -----------------------*/
