--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2126,10 +2126,10 @@ Breadcrumb
 
 .breadcrumb-blog {
 	width: 100%;
-    height: 450px;
-    background-size: cover;
-	padding-top: 130px;
+    height: 665px; 
+    padding-top: 130px;
     padding-bottom: 40px;
+    background-size: cover;
 	position: relative;
 }
 
@@ -3068,6 +3068,7 @@ Breadcrumb
 
 .blog__details__pic img {
 	min-width: 100%;
+	height: auto;
 	border-radius: 5px;
 }
 
@@ -3801,9 +3802,10 @@ Breadcrumb
         padding-bottom: 40px;
     }
 	.breadcrumb-blog {
-		height: 450px; 
-        padding-top: 110px;
-        padding-bottom: 35px;
+		width: 100%;
+        height: 665px; 
+        padding-top: 130px;
+        padding-bottom: 40px;
 	}
 }
 
@@ -3818,9 +3820,9 @@ Breadcrumb
     }
 	.breadcrumb-blog {
 		width: 100%;
-        height: 330px; 
-        padding-top: 90px;
-        padding-bottom: 30px;
+        height: 550px; 
+        padding-top: 130px;
+		padding-bottom: 40px;
     }
 	.instagram__pic__item {
 		width: 100%;
@@ -3859,6 +3861,14 @@ Breadcrumb
 		width: 100%;
 		height: 400px;
 		background-position: center center;
+	}
+	.breadcrumb-blog {
+		width: 100%;
+		height: 430px;
+		object-fit: cover;
+		padding-top: 70px;
+        padding-bottom: 25px;
+		right: -0.1%; 
 	}
 	.header__menu ul li {
 		margin-right: 10px;
@@ -4283,6 +4293,12 @@ Breadcrumb
 		height: 190px;
 		background-position: center center;
 	}
+	.breadcrumb-blog {
+		width: 100%;          
+		height: 120;        
+		padding-top: 60px;    
+		padding-bottom: 20px; 
+	}	
 	.hero__text h2 {
 		font-size: 36px;
 		line-height: 48px;
@@ -4707,7 +4723,7 @@ Breadcrumb
 	}
 	.breadcrumb-blog {
 		width: 100%;
-		height: 255px;
+		height: 420px;
 		object-fit: cover;
 		padding-top: 70px;
         padding-bottom: 25px;
@@ -4741,7 +4757,7 @@ Breadcrumb
     }
 	.breadcrumb-blog {
 		width: 100%;
-        height: 190px; 
+        height: 220px; 
         padding-top: 60px;
         padding-bottom: 20px;
     }
@@ -4774,4 +4790,10 @@ Breadcrumb
 		height: 160px;
 		background-position: center center;
 	}
+	.breadcrumb-blog {
+		width: 100%;
+        height: 180px; 
+        padding-top: 60px;
+        padding-bottom: 20px;
+    }
 }
