--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -942,8 +942,9 @@ h1 {
 }
 
 .instagram__pic__item {
-	width: 750px;
-	height: 400px;
+	width: 33.33%;
+	float: left;
+	height: 261px;
 	background-position: center center;
 }
 
@@ -3824,11 +3825,6 @@ Breadcrumb
         padding-top: 130px;
 		padding-bottom: 40px;
     }
-	.instagram__pic__item {
-		width: 100%;
-		height: 350px;
-		background-position: center center;
-	}
 	.categories__text h2 {
 		font-size: 26px;
 	}
@@ -3856,11 +3852,6 @@ Breadcrumb
 		padding-top: 70px;
         padding-bottom: 25px;
 		right: -0.1%; 
-	}
-	.instagram__pic__item {
-		width: 100%;
-		height: 400px;
-		background-position: center center;
 	}
 	.breadcrumb-blog {
 		width: 100%;
@@ -3938,11 +3929,6 @@ Breadcrumb
 /* Wide Mobile = 480px */
 
 @media only screen and (max-width: 767px) {
-	.instagram__pic__item {
-		width: 100%;
-		height: 190px;
-		background-position: center center;
-	}
 	.canvas__open {
 		display: block;
 		font-size: 22px;
@@ -4188,9 +4174,6 @@ Breadcrumb
 	.instagram__text {
 		padding-top: 70px;
 	}
-	.instagram__pic__item {
-		width: 50%;
-	}
 	.shop__product__option__right {
 		text-align: left;
 		padding-top: 20px;
@@ -4288,11 +4271,6 @@ Breadcrumb
 		padding-top: 60px;    
 		padding-bottom: 20px; 
 	}	
-	.instagram__pic__item {
-		width: 100%;
-		height: 190px;
-		background-position: center center;
-	}
 	.breadcrumb-blog {
 		width: 100%;          
 		height: 120;        
@@ -4729,11 +4707,6 @@ Breadcrumb
         padding-bottom: 25px;
 		right: -0.1%; 
 	}
-	.instagram__pic__item {
-		width: 100%;
-		height: 400px;
-		background-position: center center;
-	}
     .history-content {
         padding: 15px;
     }
@@ -4761,11 +4734,6 @@ Breadcrumb
         padding-top: 60px;
         padding-bottom: 20px;
     }
-	.instagram__pic__item {
-		width: 100%;
-		height: 205px;
-		background-position: center center;
-	}
     .history-content h4 {
         font-size: 1.25rem;
     }
@@ -4785,11 +4753,6 @@ Breadcrumb
         padding-top: 60px;
         padding-bottom: 20px;
     }
-	.instagram__pic__item {
-		width: 100%;
-		height: 160px;
-		background-position: center center;
-	}
 	.breadcrumb-blog {
 		width: 100%;
         height: 180px; 
